Rework Gradle config to stable explicit LWJGL setup